--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-       <title>My Selfie App</title>
+       <title>My Collage App</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -14,7 +14,6 @@
     <div class="container">
     <center>
         <h1>Collage Web App 
-<img src="selfie.jpeg" id="logo_img">
         </h1>
         <hr>
         <h4 style="color:red;">Please press allow as soon as popup comes. After you give a voice command</h4>
@@ -34,11 +33,10 @@
             <div id="result1"><img src="download (1).jpeg"></div>
             <div id="result1"><img src="download (2).jpeg"></div>        
             <div id="result1"><img src="download.jpeg"></div>
-
         </div>
     </center>
+    <div id="footer">by: TANISHKA SINGH</div>
     </div>
-
     <script src="main.js"></script>
 </body>
 </html>
